--- a/src/index.styles.scss
+++ b/src/index.styles.scss
@@ -1,3 +1,9 @@
+*,*::after,*::before{
+  padding: 0;
+  margin: 0;
+  box-sizing: inherit;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +16,9 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
 }
