--- a/src/index.styles.scss
+++ b/src/index.styles.scss
@@ -22,3 +22,10 @@ a {
   text-decoration: none;
   color: #000;
 }
+
+.center{
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
