--- a/src/components/Navigation/MainNavigation.styles.scss
+++ b/src/components/Navigation/MainNavigation.styles.scss
@@ -1,50 +1,58 @@
-.main-navigation__title {
-    color: white;
-
-    & a {
-      text-decoration: none;
-      color: white;
+.main-navigation {
+  
+    &__drawer-nav {
+      height: 100%;
     }
-
-  }
   
-  
-  .main-navigation__header-nav {
-    display: none;
-  }
-  
-  .main-navigation__drawer-nav {
-    height: 100%;
-  }
-  
-  
-  .main-navigation__menu-btn {
-        width: 3rem;
-        height: 3rem;
-        background: transparent;
-        border: none;
-        display: flex;
-        flex-direction: column;
-        justify-content: space-around;
-        margin-right: 2rem;
-        cursor: pointer;
+    &__menu-btn {
+      width: 3rem;
+      height: 3rem;
+      background: transparent;
+      border: none;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      margin-right: 2rem;
+      cursor: pointer;
       
-        & span {
-          display: block;
-          width: 3rem;
-          height: 2.5px;
-          background: white;
+      & span {
+        display: block;
+        width: 3rem;
+        height: 2.5px;
+        background: white;
+      }
+      
+    }
+  
+  
+      &__title {
+        color: white;
+        
+        & a {
+          text-decoration: none;
+          color: white;
         }
         
-  }
-  
-  @media (min-width: 768px) {
+      }
+
+      &__header-nav {
+        display: none;
+      }
+
+}
+
+
+ @media (min-width: 768px) {
         
-    .main-navigation__menu-btn {
-          display: none;
-     }
+    .main-navigation{
       
-    .main-navigation__header-nav {
-          display: block;
+        &__menu-btn {
+              display: none;
+        }
+          
+        &__header-nav {
+              display: block;
+        }
     }
+    
   }
