task item style file mdification

--- a/src/components/Tasks/TaskItem.styles.scss
+++ b/src/components/Tasks/TaskItem.styles.scss
@@ -1,44 +1,48 @@
 
-  .place-item {
-     margin: 1rem 0;
+  .task-item {
 
+      margin: 1rem 0;
 
       &__content {
             padding: 0;
       }
 
       &__info {
-        padding: 1rem;
-        text-align: center;
-      }
+          padding: 1rem;
+          text-align: center;
+        
 
-      &__info h2, h3, p {
-          margin: 0 0 0.5rem 0;
+          & h2, h3, p {
+              margin: 0 0 0.5rem 0;
+          }
+
       }
 
       &__actions {
+
         padding: 1rem;
         text-align: center;
         border-top: 1px solid #ccc;
-      }
 
-        &__modal-content {
-         padding: 0;
-        }
 
-        &__modal-actions {
-          text-align: right;
-        }
-
-        &__actions button,
-        &__actions a {
+        & button,
+        & a {
           margin: 0.5rem;
         }
+      }
+
+      &__modal-content {
+         padding: 0;
+      }
+
+      &__modal-actions {
+          text-align: right;
+      }
 
 }
 
 @media (min-width: 768px) {
-  .place-item__image {
+  .task-item__image {
     height: 20rem;
   } 
 }
