--- a/src/shared/components/FormElements/Button.styles.scss
+++ b/src/shared/components/FormElements/Button.styles.scss
@@ -15,51 +15,44 @@
     outline: none;
     }
   
-    &:hover,
-    &:active {
+    &:hover, :active {
     background: #ff4382;
     border-color: #ff4382;
     }
-
-}
   
-.button--inverse {
+    &--inverse {
     background: transparent;
     color: #ff0055;
   
   
-        &:hover,
-        &:active {
+        &:hover, :active {
             color: white;
             background: #ff0055;
         }
-}
+    }
 
-.button--danger {
+    &--danger {
     background: #830000;
     border-color: #830000;
 
-  
-    &:hover,
-    &:active {
-        background: #f34343;
-        border-color: #f34343;
-    }
+        &:hover, :active {
+            background: #f34343;
+            border-color: #f34343;
+        }
     
-    &:disabled,
-    &:hover:disabled,
-    &:active:disabled {
-        background: #ccc;
-        color: #979797;
-        border-color: #ccc;
-        cursor: not-allowed;
+        &:disabled, :hover:disabled, :active:disabled {
+            background: #ccc;
+            color: #979797;
+            border-color: #ccc;
+            cursor: not-allowed;
+        }
+    }
+  
+    &--small {
+    font-size: 0.8rem;
+    }
+  
+    &--big {
+    font-size: 1.5rem;
     }
 }
-  
-  .button--small {
-    font-size: 0.8rem;
-  }
-  
-  .button--big {
-    font-size: 1.5rem;
-  }
