--- a/src/shared/components/FormElements/Button.css
+++ b/src/shared/components/FormElements/Button.css
@@ -6,8 +6,7 @@
     background: #ff0055;
     color: white;
     cursor: pointer;
-    margin: 1rem 0;
-    /* margin-right: 1rem; */
+    margin: 1rem;
     text-decoration: none;
     display: inline-block;
   }
